--- a/ls73/transportation-app/index.html
+++ b/ls73/transportation-app/index.html
@@ -25,7 +25,7 @@
       cursor: pointer;
     }
   </style>
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
 </head>
 
 <body>
